<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Runner</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="coins">Coins</string>
    <string name="mph">Current Speed: 0</string>
    <string name="reset">Reset</string>
    <string name="go">Go</string>
    <string name="feet">feet</string>
    <string name="inch">inch</string>
    <string name="weight">weigth</string>
    <string name="firstTime">firstTime</string>
    <string name="secondTime">secondtime</string>
    <string name="viewMonsters">viewMonster</string>
    <string name="equipMonsters">equipMonster</string>
    <string name="equipMonsterSecond">equipMonsterSecond</string>
    <string name="chooseMonster">chooseMonster</string>
    <string name="showDungeon">showDungeon</string>
    <string name="showBattle">showBattle</string>
    
    <!-- Status Saving  -->
    <string name="isRunning">isRunning</string>
    <string name="raceType">raceType</string>
    <string name="raceId">raceId</string>
    
    <string-array name="race_array">
        <item>10K</item>
        <item>5K</item>
        <item>3K</item>
        <item>1K</item>
    </string-array>
    
    <string-array name="friends_array">
        <item>Gary</item>
        <item>Brandon</item>
        <item>York</item>
        <item>Kevin</item>
        <item>Joel</item>
    </string-array>
    
        <string-array name="items_array">
        <item>Nike T-Shirt</item>
        <item>Nike Pants</item>
        <item>Nike Shoes</item>
        <item>Nike Gloves</item>
        <item>Nike Hat</item>
    </string-array>
    
</resources>